# agent_AI_devs4

./: .env-copy  .gitignore  README.md  init_repo.py  pyproject.toml
agent/agents/: assistant.py  exercise_agent.py
agent/app/: main.py
agent/core/: loop.py  orchestrator.py
agent/llm/: __init__.py  factory.py  mock_client.py  openai_client.py  openrouter_client.py
agent/tests/: test_agent.py  test_calculator.py
agent/tools/: base.py  calculator.py  fetch_url.py  filter_csv.py  hub_client.py  registry.py
agent/transports/: api.py  cli.py
agents/: assistant.py
app/: config.py
core/: types.py
exercises/: client.py  run.py
exercises/exercise_0101/: solution.py
tools/: base.py  registry.py
transports/: cli.py
white_label_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
